--- a/templates/base.html
+++ b/templates/base.html
@@ -35,7 +35,7 @@
                                 <a class="nav-link hvr-icon-wobble-vertical hvr-underline-from-center" href="{% url 'music-shelves' %}"><i class="fa-solid fa-music hvr-icon"></i>&nbsp;&nbsp;&nbsp;&nbsp;Music Shelf&nbsp;&nbsp;&nbsp;&nbsp;<i class="fa-solid fa-egg hvr-icon"></i></a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link hvr-icon-wobble-vertical hvr-underline-from-center" href="{% url 'games-shelves' %}"><i class="fa-solid fa-gamepad hvr-icon"></i>&nbsp;&nbsp;&nbsp;&nbsp;Games Shelf&nbsp;&nbsp;&nbsp;&nbsp;<i class="fa-solid fa-egg hvr-icon"></i></a>
+                                <a class="nav-link hvr-icon-wobble-vertical hvr-underline-from-center" href="{% url 'games' %}"><i class="fa-solid fa-gamepad hvr-icon"></i>&nbsp;&nbsp;&nbsp;&nbsp;Games Shelf&nbsp;&nbsp;&nbsp;&nbsp;<i class="fa-solid fa-egg hvr-icon"></i></a>
                             </li>
                             <li class="nav-item">
                                 <a class="nav-link hvr-icon-wobble-vertical hvr-underline-from-center" href="{% url 'book-shelves' %}"><i class="fa-solid fa-book hvr-icon"></i>&nbsp;&nbsp;&nbsp;&nbsp;Book Shelf&nbsp;&nbsp;&nbsp;&nbsp;<i class="fa-solid fa-egg hvr-icon"></i></a>
