--- a/templates/games/editform.html
+++ b/templates/games/editform.html
@@ -9,14 +9,17 @@
                 {% csrf_token %}
                 <div class="form-floating mb-3">
                     {{ form.name }}
-                    <label for="{{ form.game_id.id_for_label }}" class="form-label">Name</label>
+                    <label for="{{ form.name.id_for_label }}" class="form-label">Name</label>
                 </div>
                 <div class="form-floating mb-3">
                     {{ form.my_description }}
                     <label for="{{ form.my_description.id_for_label }}" class="form-label">Your thoughts on this game</label>
                 </div>
-                <div class="col-12">
+                <div class="col-12 mb-3">
                     <input class="btn btn-outline-light btn-lg add-game-btn" type="submit" value="Complete editing">
+                </div>
+                <div class="col-12">
+                    <a href="{% url 'game-delete' game_id %}" class="btn btn-outline-danger btn-lg delete-game-btn" type="button">Delete game</a>
                 </div>
             </form>
         </div>
