--- a/templates/games/shelves.html
+++ b/templates/games/shelves.html
@@ -1,30 +1,13 @@
 {% extends 'base.html' %}
 
 {% block content %}
-<div class="container page-containter">
+
+<div class="container page-container">
     <div class="row g-2 p-0">
-        {% for game in my_games %}
-        <div class="col-2">
-            <a class="card game-card text-decoration-none" href="{% url 'game-display' game.pk %}">
-                <!-- <div class="card-header text-center">
-                    {{ game.name }}
-                </div> -->
-                <img src="{{ game.cover_url }}" class="hvr-bounce-in">
-                <div class="card-footer text-center">
-                    {% if game.release_date %}
-                    {{ game.release_date }}
-                    {% else %}
-                    TBA
-                    {% endif %}
-                </div>
-            </a>
-        </div>
-        {% endfor %}
-    </div>
-    <div class="row g-2 p-0 mt-4">
-        <div class="col-12 text-center">
-            <a href="{% url 'game-add' %}" class="btn btn-outline-light btn-lg add-game-btn">Add Game</a>
+        <div class="col-4">
+            
         </div>
     </div>
-</div>
+</div>                                                              
+
 {% endblock content %}
