--- a/templates/music/playlist.html
+++ b/templates/music/playlist.html
@@ -12,11 +12,13 @@
             <a href="{{ my_playlist.spotify_url }}" target='_blank' class="text-decoration-none display-6 hvr-grow">Link to this playlist</a>
         </div>
     </div>
+    {% if user.is_superuser %}
     <div class="row mb-4">
         <div class="col-12 text-center playlist-header">
             <a href="{% url 'update-playlist' my_playlist.id %}" class="text-decoration-none hvr-grow">Update this playlist...</a>
         </div>
     </div>
+    {% endif %}
     <div class="row g-2 p-0">
     {% for track in my_playlist.track_set.all %}
         <div class="col-4 mb-4">
