--- a/templates/games/games.html
+++ b/templates/games/games.html
@@ -5,21 +5,21 @@
     <div class="row g-2 p-0 text-center">
         <div class="col-12 my-4">
             <div class="nav nav-pills nav-fill mb-3 justify-content-center nav-justified games-shelves-tabs" id="pills-tab" role="tablist">
-                    <button class="nav-link active text-light" id="pills-all-tab" data-bs-toggle="pill" data-bs-target="#pills-all"
+                    <button class="nav-link active" id="pills-all-tab" data-bs-toggle="pill" data-bs-target="#pills-all"
                         type="button" role="tab" aria-controls="pills-all" aria-selected="true">
                         ALL GAMES
                     </button>
-                    <button class="nav-link text-light" id="pills-favourite-tab" data-bs-toggle="pill" data-bs-target="#pills-favourite"
+                    <button class="nav-link" id="pills-favourite-tab" data-bs-toggle="pill" data-bs-target="#pills-favourite"
                         type="button" role="tab" aria-controls="pills-favourite" aria-selected="false">
                         FAVOURITES
                     </button> 
-                    <button class="nav-link position-relative text-light" id="pills-abs-favourite-tab" data-bs-toggle="pill" data-bs-target="#pills-abs-favourite"
+                    <button class="nav-link position-relative" id="pills-abs-favourite-tab" data-bs-toggle="pill" data-bs-target="#pills-abs-favourite"
                         type="button" role="tab" aria-controls="pills-abs-favourite" aria-selected="false">
                         <span class="position-absolute top-0 start-50 translate-middle badge rounded-pill bg-danger">
                         <i class="fa-solid fa-heart"></i></span>
                         ABSOLUTE FAVOURITES
                     </button>
-                    <button class="nav-link text-light" id="pills-want-tab" data-bs-toggle="pill" data-bs-target="#pills-want"
+                    <button class="nav-link" id="pills-want-tab" data-bs-toggle="pill" data-bs-target="#pills-want"
                         type="button" role="tab" aria-controls="pills-want" aria-selected="false">
                         WANT TO PLAY
                     </button>
