--- a/templates/base.html
+++ b/templates/base.html
@@ -28,9 +28,11 @@
                     </div>
                     <div class="offcanvas-body text-center">
                         <ul class="navbar-nav justify-content-end flex-grow-1 sidebar-navbar">
+                            {% if user.is_authenticated %}
                             <li class="nav-item">
                                 <a class="nav-link hvr-icon-wobble-vertical hvr-shutter-out-horizontal" href="{% url 'home:ovum' user.pk %}"><i class="fa-solid fa-user hvr-icon"></i>&nbsp;&nbsp;&nbsp;&nbsp;Profile&nbsp;&nbsp;&nbsp;&nbsp;<i class="fa-solid fa-egg hvr-icon"></i></a>
                             </li>
+                            {% endif %}
                             <li class="nav-item">
                                 <a class="nav-link hvr-icon-wobble-vertical hvr-shutter-out-horizontal" href="{% url 'games:list' %}"><i class="fa-solid fa-gamepad hvr-icon"></i>&nbsp;&nbsp;&nbsp;&nbsp;Games Shelf&nbsp;&nbsp;&nbsp;&nbsp;<i class="fa-solid fa-egg hvr-icon"></i></a>
                             </li>
