--- a/templates/games/game.html
+++ b/templates/games/game.html
@@ -5,7 +5,7 @@
 <div class="container page-container">
     <div class="row g-2 pb-4 text-center">
         <a href="{% url 'games:list' %}"
-            class="display-6 mb-4 text-light text-decoration-none games-shelf-link hvr-grow">Back to shelf</a>
+            class="display-5 mb-4 mx-auto hvr-shutter-out-horizontal text-decoration-none games-shelf-link">Back to shelf</a>
     </div>
     <div class="row g-2 pb-2">
         <div class="col-12">
