--- a/static/css/main.css
+++ b/static/css/main.css
@@ -301,4 +301,13 @@ footer {
   z-index: 9999;
 }
 
+.games-shelf-link {
+  width: 99%;
+  border-radius: 0;
+  border: 2px solid #ddf8e8;
+  border-right: none;
+  border-left: none;
+  color: #ddf8e8;
+}
+
 /*# sourceMappingURL=main.css.map */
